z-index fix??

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,6 +8,7 @@
   padding-top: 40px;
   // transition: height 0.3s ease-out;
   z-index: $z-index-3;
+  transform: translate3d(0, 0, 0);
 
   @media (min-width: $screen-md) {
     height: 142px;
